--- a/awangran-site/src/index.css
+++ b/awangran-site/src/index.css
@@ -1,13 +1,43 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color: rgba(255, 255, 255, 0.87);
+:root {
+  background: rgba(255,146,139,1);
 
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ubuntu-mono-regular {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ubuntu-mono-bold {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.ubuntu-mono-regular-italic {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.ubuntu-mono-bold-italic {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.single-day-regular {
+  font-family: "Single Day", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 
 
@@ -16,10 +46,31 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  justify-content: center;
+  background: linear-gradient(180deg, rgba(242,255,236,1) 0%, rgba(205,234,192,1) 20%, rgba(225,209,166,1) 40%, rgba(255,172,129,1) 60%, rgba(255,146,139,1) 81%);
+
 }
 
+#main {
+  display: flex;
+  background-color: #FFF5E7;
+  justify-content: center;
+  width: 90vw;
+  position: relative;
+  top: 40px;
+  border-radius: 50px;
+  box-sizing: border-box; 
+  height: 100%;
+}
 
-
-
+#inner{
+  border: 4px solid #B7E0A3; 
+  border-radius: 50px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  width: 95%;
+  box-sizing: border-box; 
+  text-align: center; 
+}
 
 
