--- a/awangran-site/src/index.css
+++ b/awangran-site/src/index.css
@@ -4,10 +4,13 @@
 
 :root {
   background: rgba(255,146,139,1);
-
+  -webkit-box-sizing: border-box;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  width: 100vw;
+  scroll-behavior: smooth
 }
 
 .ubuntu-mono-regular {
@@ -44,15 +47,14 @@
 body {
   margin: 0;
   display: flex;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
   justify-content: center;
   background: linear-gradient(180deg, rgba(242,255,236,1) 0%, rgba(205,234,192,1) 20%, rgba(225,209,166,1) 40%, rgba(255,172,129,1) 60%, rgba(255,146,139,1) 81%);
-
+  -webkit-box-sizing: border-box;
 }
 
 #main {
-  display: flex;
   background-color: #FFF5E7;
   justify-content: center;
   width: 90vw;
@@ -61,6 +63,7 @@ body {
   border-radius: 50px;
   box-sizing: border-box; 
   height: 100%;
+  display: flex;
 }
 
 #inner{
