--- a/awangran-site/src/index.css
+++ b/awangran-site/src/index.css
@@ -50,7 +50,7 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   justify-content: center;
-  background: linear-gradient(180deg, rgba(242,255,236,1) 0%, rgba(205,234,192,1) 20%, rgba(225,209,166,1) 40%, rgba(255,172,129,1) 60%, rgba(255,146,139,1) 81%);
+  background: linear-gradient(180deg, rgb(242, 255, 236) 0%, rgba(205,234,192,1) 20%, rgba(225,209,166,1) 40%, rgba(255,172,129,1) 60%, rgba(255,146,139,1) 81%);
   -webkit-box-sizing: border-box;
 }
 
